Added Previous Button Added TryCatch method for PREV button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="correct_toast">Correct</string>
     <string name="incorrect_toast">Incorrect</string>
     <string name="next_button">Next</string>
+    <string name="pev_button">Previous</string>
     <string name="image_description">This is image Description</string>
 </resources>
